--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
     </section>
     <section id="about">
         <h2>About</h2>
-        <p>This section can include more detailed personal or professional information.</p>
+        <p>👋 Hey there! I'm Leo, a tech enthusiast from Vietnam now based in Georgia, USA. By day, I'm </p>
+        <p>diving deep into coding and AI. Beyond tech, I'm a lover of solitude, nature, and literature. Join me </p>
+        <p>as we explore the digital cosmos and embrace the boundless possibilities of life together! 🌟🚀</p>
     </section>
     <section id="contact">
         <h2>Contact</h2>
