--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     </section>
     <section id="about">
         <h2>About</h2>
+        <img src="https://github.com/LeoNomad1902/mywebsite/blob/main/profilepic.jpg?raw=true" alt="Profile Picture of Leo" style="width:100%; max-width:300px;">
         <p>👋 Hey there! I'm Leo, a tech enthusiast from Vietnam now based in Georgia, USA. By day, I'm </p>
         <p>diving deep into coding and AI. Beyond tech, I'm a lover of solitude, nature, and literature. Join me </p>
         <p>as we explore the digital cosmos and embrace the boundless possibilities of life together! 🌟🚀</p>
